--- a/package.json
+++ b/package.json
@@ -6,12 +6,22 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.2.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
+    "bcrypt": "^0.8.0",
     "body-parser": "~1.0.0",
+    "config": "^1.6.0",
+    "connect-redis": "^2.1.0",
+    "cookie-parser": "~1.0.1",
+    "datejs": "^1.0.0-rc1",
     "debug": "~0.7.4",
-    "jade": "~1.3.0"
+    "express": "~4.2.0",
+    "express-session": "^1.9.1",
+    "jade": "~1.3.0",
+    "mongoose": "^3.8.18",
+    "mongoose-timestamp": "^0.3.0",
+    "morgan": "~1.0.0",
+    "passport": "^0.2.1",
+    "passport-facebook": "^1.0.3",
+    "static-favicon": "~1.0.0",
+    "validator": "^3.22.0"
   }
 }
