--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "underscore": "~1.7.0",
     "bootstrap": "~3.2.0",
     "highcharts.com": "~4.0.3",
-    "datejs": "~1.0.0-rc1"
+    "datejs": "~1.0.0-rc1",
+    "bootstrap-social": "~4.8.0"
   }
 }
