--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "bootstrap": "~3.2.0",
     "highcharts.com": "~4.0.3",
     "datejs": "~1.0.0-rc1",
-    "bootstrap-social": "~4.8.0"
+    "bootstrap-social": "~4.8.0",
+    "bootstrap-tour": "~0.10.1"
   }
 }
